--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,9 +2,9 @@ FROM nginx
 
 RUN rm -rf /usr/share/nginx/html/index.html
 
-RUN rm -rf /etc/nginx/default.d/
+RUN rm -rf /etc/nginx/default.d/roboshop.conf
 
-COPY roboshop.conf /etc/nginx/default.d/roboshop.conf
+COPY roboshop.conf /etc/nginx/default.d/
 
 ADD static /usr/share/nginx/html/
 
