--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,6 +2,10 @@ FROM nginx
 
 RUN rm -rf /usr/share/nginx/html/index.html
 
+RUN rm -rf /etc/nginx/nginx.conf
+
+RUN rm -rf /etc/nginx/conf.d/default.conf
+
 RUN rm -rf /etc/nginx/default.d/roboshop.conf
 
 COPY roboshop.conf /etc/nginx/default.d/
