--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -9,6 +9,8 @@ WORKDIR /app
 
 COPY requirements.txt /app/
 
+RUN apk add python3-dev build-base linux-headers pcre-dev
+
 RUN pip install -r requirements.txt
 
 COPY *.py /app/
