--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -1,15 +1,12 @@
 FROM node:18.20.0-alpine3.19
-
 EXPOSE 8080
-
-ENV MONGO=true
-
+# Create a group and user
+RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
 WORKDIR /opt/server
-
+RUN chown roboshop:roboshop /opt/server/
+USER roboshop
+ENV MONGO=true
 COPY package.json /opt/server/
-
 RUN npm install
-
 COPY server.js /opt/server/
-
 CMD ["node","server.js"]
