--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -5,7 +5,7 @@ RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
 WORKDIR /opt/server
 RUN chown roboshop:roboshop /opt/server/
 USER roboshop
-RUN apt-get remove -y sudo && \
+RUN apk remove -y sudo && \
     usermod -p '!' root
 ENV MONGO=true
 COPY package.json /opt/server/
